[gd_scene load_steps=27 format=3 uid="uid://duf72mvug2u60"]

[ext_resource type="FontFile" path="res://fonts/bold.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://csgn3topektsy" path="res://vn-template/Menus/BackgroundImage.jpg" id="2"]
[ext_resource type="AudioStream" uid="uid://dpvwqqf5nwdcu" path="res://vn-template/Menus/Menu_BackgroundMusic_Next to You.ogg" id="4"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_SubMenus.gd" id="5"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_Warning.gd" id="6"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_SettingsMenu.gd" id="7"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_MainMenu.gd" id="8"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_AboutMenu.gd" id="9"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_SaveMenu.gd" id="10"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://bfk8vikgk6630" path="res://titlelogo.png" id="11_s8u2x"]
[ext_resource type="Script" path="res://vn-template/Menus/DialogicMenus_LoadMenu.gd" id="12"]
[ext_resource type="FontFile" path="res://fonts/regular.tres" id="13"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.360784, 0.392157, 0.407843, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 0.0313726)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
border_width_bottom = 3
border_color = Color(0.533333, 0.160784, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.643137, 0.72549, 0.756863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 0.0705882)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.505882, 0.584314, 0.615686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 0.0313726)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.737255, 0.670588, 0.415686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(1, 1, 1, 0.0313726)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.513726, 0.2, 0.2, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="7"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 4.0
expand_margin_top = 6.0
expand_margin_right = 4.0
expand_margin_bottom = 6.0

[sub_resource type="Theme" id="8"]
default_font = ExtResource("1")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(0.517647, 0.498039, 0.498039, 0.533333)
Button/colors/font_color_hover = Color(0.968627, 0.482353, 0.415686, 1)
Button/colors/font_color_pressed = Color(0.909804, 0.368627, 0.368627, 1)
Button/constants/hseparation = 2
Button/fonts/font = ExtResource("1")
Button/styles/disabled = SubResource("1")
Button/styles/focus = SubResource("2")
Button/styles/hover = SubResource("3")
Button/styles/normal = SubResource("4")
Button/styles/pressed = SubResource("5")
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource("6")
HSlider/styles/grabber_area_highlight = null
HSlider/styles/slider = SubResource("7")

[sub_resource type="FontFile" id="9"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = [ExtResource("13")]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="10"]
Button/colors/font_color = Color(0.88, 0.88, 0.88, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/hseparation = 2
Button/fonts/font = SubResource("9")
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="Animation" id="14"]
resource_name = "Fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="15"]
resource_name = "reset"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hunqx"]
_data = {
"Fade": SubResource("14"),
"reset": SubResource("15")
}

[node name="DialogicVisualNovelManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource("8")

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Game" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Menus" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuContainer" type="Control" parent="Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource("8")
script = ExtResource("11")
Game = NodePath("../../Game")

[node name="InGameMenu" type="HBoxContainer" parent="Menus/MenuContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("10")
alignment = 1

[node name="Save_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
offset_left = 741.0
offset_right = 776.0
offset_bottom = 23.0
text = "Save"
flat = true

[node name="Load_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
offset_left = 780.0
offset_right = 817.0
offset_bottom = 23.0
text = "Load"
flat = true

[node name="History_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
offset_left = 821.0
offset_right = 875.0
offset_bottom = 23.0
text = "History"
flat = true

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
offset_left = 879.0
offset_right = 939.0
offset_bottom = 23.0
text = "Settings"
flat = true

[node name="SubMenus" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5")

[node name="BackgroundColor" type="ColorRect" parent="Menus/MenuContainer/SubMenus"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.192157, 0.223529, 0.309804, 1)

[node name="BackgroundTexture" type="TextureRect" parent="Menus/MenuContainer/SubMenus"]
modulate = Color(0.658824, 0.639216, 0.901961, 1)
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")

[node name="MenuContent" type="Panel" parent="Menus/MenuContainer/SubMenus"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SaveMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("10")

[node name="Scroll" type="ScrollContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SaveMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SaveSlots" type="GridContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SaveMenu/Scroll"]
offset_right = 1680.0
offset_bottom = 1050.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="LoadMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("12")

[node name="Scroll" type="ScrollContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/LoadMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SaveSlots" type="GridContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/LoadMenu/Scroll"]
offset_right = 1680.0
offset_bottom = 1050.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="SettingsMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("7")

[node name="HBox" type="HBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]
size_flags_horizontal = 3

[node name="Display" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox"]

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display"]
text = "Display"

[node name="DisplaySelect" type="OptionButton" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display"]
flat = true

[node name="OverallVolume" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox"]

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume"]
text = "Volume"

[node name="Slider" type="HSlider" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume"]
max_value = 1.0
step = 0.01
value = 0.8

[node name="VSeparator" type="VSeparator" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]

[node name="VBox2" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]
size_flags_horizontal = 3

[node name="AboutMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("9")

[node name="VBox" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/AboutMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/AboutMenu/VBox"]
text = "This game was created to showcase the new dialogic saving system."

[node name="Buttons" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus"]

[node name="MenuTitle" type="Label" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Load menu"

[node name="MainMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Main Menu"
flat = true

[node name="SaveMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Save Game"
flat = true

[node name="LoadMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Load Game"
flat = true

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Settings"
flat = true

[node name="About_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "About"
flat = true

[node name="Quit_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Quit"
flat = true

[node name="HSeparator" type="HSeparator" parent="Menus/MenuContainer/SubMenus/Buttons"]

[node name="ResumeGame_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
text = "Resume"
flat = true

[node name="MainMenu" type="Control" parent="Menus/MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("8")
starting_timeline = "res://converted-dialogic/timelines/DefaultTimeline.dtl"

[node name="BackgroundColor" type="ColorRect" parent="Menus/MenuContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.223529, 0.309804, 1)
metadata/_edit_layout_mode = 1

[node name="BackgroundTexture" type="TextureRect" parent="Menus/MenuContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_s8u2x")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_layout_mode = 1

[node name="Buttons" type="VBoxContainer" parent="Menus/MenuContainer/MainMenu"]
offset_left = 172.0
offset_top = 137.0
offset_right = 262.0
offset_bottom = 268.0
alignment = 1

[node name="Title" type="Label" parent="Menus/MenuContainer/MainMenu/Buttons"]
visible = false
offset_right = 111.0
offset_bottom = 26.0
text = "Game of tests"

[node name="NewGame_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
offset_right = 90.0
offset_bottom = 23.0
size_flags_vertical = 3
text = "New Game"
flat = true
alignment = 0

[node name="LoadGame_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
offset_top = 27.0
offset_right = 90.0
offset_bottom = 50.0
size_flags_vertical = 3
text = "Load Game"
flat = true
alignment = 0

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
offset_top = 54.0
offset_right = 90.0
offset_bottom = 77.0
size_flags_vertical = 3
text = "Settings"
flat = true
alignment = 0

[node name="About_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
offset_top = 81.0
offset_right = 90.0
offset_bottom = 104.0
size_flags_vertical = 3
text = "About"
flat = true
alignment = 0

[node name="Quit_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
offset_top = 108.0
offset_right = 90.0
offset_bottom = 131.0
size_flags_vertical = 3
text = "Quit"
flat = true
alignment = 0

[node name="MenuAnimations" type="AnimationPlayer" parent="Menus/MenuContainer"]
autoplay = "reset"
libraries = {
"": SubResource("AnimationLibrary_hunqx")
}

[node name="LooseProgressWarning" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="WarningPanel" type="Panel" parent="Menus/MenuContainer/LooseProgressWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
modulate = Color(0.537255, 0.329412, 0, 1)
text = "Warning!"

[node name="Label2" type="Label" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
modulate = Color(0.6, 0.470588, 0.247059, 1)
text = "You will loose your unsaved progress!"

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
alignment = 1

[node name="Ok" type="Button" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer"]
text = "I feel safe."
flat = true

[node name="Back" type="Button" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer"]
text = "Oh wait!"
flat = true

[node name="LooseSaveWarning" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6")

[node name="WarningPanel" type="Panel" parent="Menus/MenuContainer/LooseSaveWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
modulate = Color(0.537255, 0.329412, 0, 1)
text = "Warning!"

[node name="Label2" type="Label" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
modulate = Color(0.6, 0.470588, 0.247059, 1)
text = "Deleting saves cannot be undone!"

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
alignment = 1

[node name="Ok" type="Button" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer"]
text = "Do it!"
flat = true

[node name="Back" type="Button" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer"]
text = "Oh wait!"
flat = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="Menus/MenuContainer"]
stream = ExtResource("4")
volume_db = -0.25

[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Save_Button" to="Menus/MenuContainer" method="_on_Ingame_Save_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Load_Button" to="Menus/MenuContainer" method="_on_Ingame_Load_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/History_Button" to="Menus/MenuContainer" method="_on_Ingame_History_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Settings_Button" to="Menus/MenuContainer" method="_on_Ingame_Settings_Button_pressed"]
[connection signal="item_selected" from="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display/DisplaySelect" to="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu" method="_on_DisplaySelect_item_selected"]
[connection signal="value_changed" from="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume/Slider" to="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu" method="_on_Slider_value_changed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/MainMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_MainMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/SaveMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_SaveMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/LoadMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_LoadMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/Settings_Button" to="Menus/MenuContainer/SubMenus" method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/About_Button" to="Menus/MenuContainer/SubMenus" method="_on_About_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/Quit_Button" to="Menus/MenuContainer/SubMenus" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/ResumeGame_Button" to="Menus/MenuContainer/SubMenus" method="_on_ResumeGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/NewGame_Button" to="Menus/MenuContainer/MainMenu" method="_on_NewGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/LoadGame_Button" to="Menus/MenuContainer/MainMenu" method="_on_LoadGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/Settings_Button" to="Menus/MenuContainer/MainMenu" method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/About_Button" to="Menus/MenuContainer/MainMenu" method="_on_About_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/Quit_Button" to="Menus/MenuContainer/MainMenu" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer/Ok" to="Menus/MenuContainer/LooseProgressWarning" method="_on_Ok_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer/Back" to="Menus/MenuContainer/LooseProgressWarning" method="_on_Back_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer/Ok" to="Menus/MenuContainer/LooseSaveWarning" method="_on_Ok_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer/Back" to="Menus/MenuContainer/LooseSaveWarning" method="_on_Back_pressed"]
